--- a/src/style/theme.scss
+++ b/src/style/theme.scss
@@ -416,5 +416,6 @@ $card-section-padding: 9px;
 $outline-style: 1px solid rgba(0, 0, 0, 0.5);
 
 // font colors
-$light-text-color: rgba(255, 255, 255, 0.8);
-$dark-text-color: rgba(0, 0, 0, 0.8);
+$light-text-color: rgba(255, 255, 255, 0.6);
+$light-text-color-dim: rgba(255, 255, 255, 0.25);
+$dark-text-color: rgba(0, 0, 0, 0.7);
